cabal-version:      3.0
name:               lam
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             dubstepaztecwarriorgod
maintainer:         dubstepaztec35@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable lam
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Types
        Lam
    -- other-extensions:
    build-depends:    
        base ^>=4.19.2.0
      , ansi-terminal
    hs-source-dirs:   app
    default-language: Haskell2010
